[gd_scene load_steps=2 format=3 uid="uid://battle"]

[ext_resource type="Script" path="res://src/battle/battle.gd" id="1_script"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_script")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)
current = true

[node name="World" type="Node2D" parent="."]
z_index = 0

[node name="Background" type="Sprite2D" parent="World"]
z_index = -10
position = Vector2(640, 360)
centered = true

[node name="Ground" type="Sprite2D" parent="World"]
z_index = -5
position = Vector2(640, 560)
centered = true

[node name="Player" type="Node2D" parent="World"]
position = Vector2(340, 500)

[node name="Shadow" type="Sprite2D" parent="World/Player"]
z_index = -1
position = Vector2(0, 28)
centered = true
scale = Vector2(0.2, 0.2)

[node name="PlayerAnim" type="AnimatedSprite2D" parent="World/Player"]
position = Vector2(0, 0)
centered = true
scale = Vector2(0.2, 0.2)

[node name="HPGauge" type="ProgressBar" parent="World/Player"]
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -48.0
show_percentage = false
value = 100.0
max_value = 100.0

[node name="Enemy" type="Node2D" parent="World"]
position = Vector2(940, 420)

[node name="Shadow" type="Sprite2D" parent="World/Enemy"]
z_index = -1
position = Vector2(0, 28)
centered = true
scale = Vector2(0.12, 0.12)

[node name="EnemyAnim" type="AnimatedSprite2D" parent="World/Enemy"]
position = Vector2(0, 0)
centered = true
scale = Vector2(0.12, 0.12)

[node name="HPGauge" type="ProgressBar" parent="World/Enemy"]
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -48.0
show_percentage = false
value = 30.0
max_value = 30.0

[node name="Enemy2" type="Node2D" parent="World"]
position = Vector2(500, 500)
visible = false

[node name="Shadow" type="Sprite2D" parent="World/Enemy2"]
z_index = -1
position = Vector2(0, 28)
centered = true
scale = Vector2(0.12, 0.12)

[node name="EnemyAnim" type="AnimatedSprite2D" parent="World/Enemy2"]
position = Vector2(0, 0)
centered = true
scale = Vector2(0.12, 0.12)

[node name="HPGauge" type="ProgressBar" parent="World/Enemy2"]
offset_left = -24.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -48.0
show_percentage = false
value = 22.0
max_value = 22.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerHP" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "HP: 100/100"
horizontal_alignment = 2

[node name="EnemyHP" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_right = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "Enemy: 30/30"
horizontal_alignment = 0

[node name="Buttons" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AttackButton" type="Button" parent="UI/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -140.0
offset_top = 280.0
offset_right = -24.0
offset_bottom = 330.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "공격"

[node name="RunButton" type="Button" parent="UI/Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 24.0
offset_top = 280.0
offset_right = 140.0
offset_bottom = 330.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "도망"

[node name="DamageLayer" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RewardPopup" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RewardLabel" type="Label" parent="UI/RewardPopup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -24.0
offset_right = 100.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "+5 Gold"
horizontal_alignment = 1
vertical_alignment = 1
